CSS: Avoid (in)visible mixins

--- a/public/css/icinga/mixins.less
+++ b/public/css/icinga/mixins.less
@@ -41,11 +41,6 @@
   }
 }
 
-.invisible {
-  // Maintain layout but hide visually and from screen readers
-  visibility: hidden;
-}
-
 .opacity(@opacity: 0.6) {
   -webkit-opacity: @opacity;
      -moz-opacity: @opacity;
@@ -75,10 +70,6 @@
      -moz-transition: @transition;
        -o-transition: @transition;
           transition: @transition;
-}
-
-.visible {
-  visibility: visible;
 }
 
 // Fadein animation
